# robostats

hw1_wma/: AdversarialNature.h  DeterministicNature.h  DieHardExpert.cpp  DieHardExpert.h  Expert.h  Learner.cpp  Learner.h  Makefile  Nature.h  NewDeterministicNature.h  OddEvenExpert.h  PessimistExpert.h  SuperExpert.cpp  SuperExpert.h  definitions.h  main.cpp
hw2_bandit/: Game.m  demoEXP3.m  demoEXP3_gauss.m  demoGWM.m  demoUCB.m  demoUCB_EXP3_adv.m  demoUCB_EXP3_gauss.m  demoUCB_EXP3_planner.m  demoUCB_EXP3_table.m  gameAdversarial.m  gameGaussian.m  gameLookupTable.m  policyEXP3.m  policyGWM.m  policyUCB.m  simpleDemo.m
hw2_bandit/data/: plannerPerformance.mat  univLatencies.mat
hw3_list_pred_online_svm/SCPLabRelease/: README  data.mat  evaluateSingleSlotPrediction.m
hw3_list_pred_online_svm/SCPLabRelease/code_list_prediction/: gen_plots.m  list_success_ratio.mat  q1_3_2.m  q1_3_3.m  q1_3_3_bak.m  success_ratio.mat
hw3_list_pred_online_svm/SCPLabRelease/code_online_svm/: gen_results.m  gen_results.m~  online_svm.m  online_svm.m~  online_svm_log_1.mat  online_svm_log_2.mat  online_svm_log_4.mat  online_svm_log_5.mat  online_svm_log_7.mat  online_svm_log_9.mat  q2_3.m  q2_3.m~
hw3_list_pred_online_svm/SCPLabRelease/csv_data/: feat_test  feat_train  result_test  result_train
hw4_particle_filter/: README  report.odt
hw4_particle_filter/src/models/: measurement_model.cpp  motion_model.cpp  motion_model.h
hw4_particle_filter/src/particle_filter/: CMakeLists.txt  map.yaml  package.xml
hw4_particle_filter/src/particle_filter/data/: .instruct.txt.swp
hw4_particle_filter/src/particle_filter/data/map/: .bee-map.c.swp
hw4_particle_filter/src/particle_filter/include/particle_filter/: DataLoader.h  DistanceMap.h  MotionModel.h  Particle.h  ParticleFilter.h
hw4_particle_filter/src/particle_filter/launch/: data.launch  particle_filter.launch
hw4_particle_filter/src/particle_filter/rviz/: particle_filter.rviz
hw4_particle_filter/src/particle_filter/src/: .DistanceMap.h.swp  .load_map.cpp.swp  DataLoader.cpp  DistanceMap.cpp  MotionModel.cpp  ParticleFilter.cpp  data.launch  load_data.cpp  load_map.cpp  main.cpp  map.launch
hw4_particle_filter/src/particle_filter_msgs/: CMakeLists.txt  package.xml
hw4_particle_filter/src/particle_filter_msgs/msg/: distance_map.msg  laser_odom.msg  map_x.msg  map_y.msg  particle.msg  ray_distances.msg
wma_hw/: .Learner.cpp.swp  .Learner.h.swp  .main.cpp.swp  AdversarialNature.cpp  AdversarialNature.h  DeterministicNature.cpp  DieHardExpert.h  Expert.cpp  FieldExpert.cpp  FieldExpert.h  Learner.cpp  Learner.h  LocationExpert.cpp  LocationExpert.h  Makefile.bak  Nature.cpp  Nature.h  Nature.m  NewDeterministicNature.cpp  OddEvenExpert.cpp  OddEvenExpert.h  PessimistExpert.cpp  PessimistExpert.h  README  StochasticNature.cpp  StochasticNature.h  WeatherExpert.cpp  WeatherExpert.h  definitions.h  main.cpp
