<?xml version="1.0"?>
<package>
  <name>particle_filter_msgs</name>
  <version>0.0.0</version>
  <description>The particle_filter_msgs package</description>

  <maintainer email="johnnyw@andrew.cmu.edu">jdub</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

</package>
